# zkWasm-rust

./: Cargo.toml  Makefile  dryrun.sh  test.sh  test_host.sh
derive_builder/: Cargo.toml
derive_builder/src/: lib.rs
src/: allocator.rs  bn256.rs  cache.rs  jubjub.rs  keccak.rs  kvpair.rs  lib.rs  merkle.rs  poseidon.rs  test.rs  witness.rs
