[package]
name = "zkwasm-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkwasm_rust_sdk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
test = []

[dependencies]
rlp = { version = "0.5.2", default-features = false }
wasm-bindgen = "0.2.83"
