[package]
name = "zkwasm-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkwasm_rust_sdk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
wasmbind = []
witness = [ "wasmbind"]

[dependencies]
primitive-types = {version="0.12.1", default-features = false}
wasm-bindgen = "0.2.83"
